kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: list
spec:
  selector:
    app: list
  ports:
    - port: 8080
      targetPort: 8080
